# swr-2.5

./: .gitignore  CMakeLists.txt  README  README.md  run-swr  swr  valgrind
Visual Studio 2010/: SWR-2.0.sln
Visual Studio 2010/SWR-2.0/: ReadMe.txt  SWR-2.0.vcxproj  SWR-2.0.vcxproj.filters  stdafx.cpp
Visual Studio 2010/swr_support/: ReadMe.txt  swr_support.vcxproj
area/: area.lst  limbo
libs/swr_support/: CMakeLists.txt  bet.c  buffer.c  file_io.c  hashstr.c  misc.c  os_amiga.c  os_amiga.h  os_unix.c  os_unix.h  os_win32.c  os_win32.h  sha256.c  string_handling.c  time_fun.c  vector3.c
planets/: planet.lst  space.lst
spacecraft/: ship.lst
src/: Makefile  Makefile.MOS  act_comm.c  act_info.c  act_move.c  act_obj.c  act_wiz.c  bet.h  boards.c  build.c  clans.c  colony.c  comm.c  const.c  copyover.c  db.c  fight.c  handler.c  hashstr.c  imc.c  imc.h  imccfg.h  interp.c  magic.c  makeobjs.c  misc.c  morespace.c  mud.h  mud_comm.c  mud_prog.c  nanny.c  os.h  os_amiga.c  os_amiga.h  os_win32.c  os_win32.h  planets.c  player.c  reset.c  save.c  (+15 more)
src/swr_support/: Makefile  Makefile.MOS  SCOptions  bet.c  file_io.c  file_read.c  hashstr.c  misc.c  os_amiga.c  os_amiga.h  os_morphos.c  os_morphos.h  os_unix.c  os_unix.h  os_win32.c  os_win32.h  sha256.c  string_handling.c  swr_support.h  time_fun.c
system/: .gitignore
trunk/: README  run-swr
trunk/Visual Studio 2010/: SWR-2.0.sln
trunk/Visual Studio 2010/SWR-2.0/: SWR-2.0.cpp
trunk/Visual Studio 2010/swr_support/: swr_support.vcxproj.filters
trunk/area/: area.lst  limbo  mobiles
trunk/clans/: clan.lst
trunk/imc/: imc.config
trunk/spacecraft/: ship.lst
trunk/src/: Makefile  Makefile.MOS  SCOptions  SMakefile  act_comm.c  act_info.c  act_move.c  act_obj.c  act_wiz.c  boards.c  build.c  clans.c  colony.c  comm.c  const.c  copyover.c  db.c  fight.c  handler.c  hashstr.c  id.c  imc.c  imc.h  imccfg.h  interp.c  magic.c  makeobjs.c  misc.c  morespace.c  mud.h  mud_comm.c  mud_prog.c  nanny.c  os.h  os_amiga.c  os_amiga.h  os_unix.h  planets.c  player.c  reset.c  (+16 more)
trunk/src/swr_support/: Makefile  Makefile.MOS  SCOptions  bet.c  buffer.c  buffer.h  file_io.c  hashstr.c  misc.c  os.h  os_amiga.c  os_amiga.h  os_morphos.h  os_unix.c  os_unix.h  os_win32.c  os_win32.h  sha256.c  string_handling.c  swr_support.h  time_fun.c
